--- a/todo
+++ b/todo
@@ -1,4 +1,12 @@
 1- work on lms project
 2- setup SQLite3 on ubu machine
 3- create lms rails project
+4- do stuff
+5- do more stuff
+4- do stuff
+5- do more stuff
+4- do stuff
+5- do more stuff
+4- do stuff
+5- do more stuff
 
