Third set of commit changes - ready to git push to github

--- a/README
+++ b/README
@@ -12,3 +12,8 @@ When it comes time for the people to rise and tell
 their reps not to vote for the bail out of the
 fat cats
 
+When it comes time for the people to rise and tell
+their reps not to vote for the bail out of the
+fat cats
+
+
